--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,4 @@
 .App{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
+  width: 85%;
+  margin: 1rem auto;
 }
